// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabScreenWrapper Snapshots matches snapshot with custom contentContainerStyle 1`] = `
<View
  edges={
    [
      "top",
      "left",
      "right",
    ]
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "padding": 20,
          "paddingBottom": 105,
        }
      }
      keyboardShouldPersistTaps="handled"
      nestedScrollEnabled={true}
      scrollEnabled={true}
    >
      <View />
    </RCTScrollView>
  </View>
</View>
`;

exports[`TabScreenWrapper Snapshots matches snapshot with default props 1`] = `
<View
  edges={
    [
      "top",
      "left",
      "right",
    ]
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "paddingBottom": 105,
        }
      }
      keyboardShouldPersistTaps="handled"
      nestedScrollEnabled={true}
      scrollEnabled={true}
    >
      <View />
    </RCTScrollView>
  </View>
</View>
`;

exports[`TabScreenWrapper Snapshots matches snapshot with scrollEnabled=false 1`] = `
<View
  edges={
    [
      "top",
      "left",
      "right",
    ]
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "paddingBottom": 105,
        }
      }
      keyboardShouldPersistTaps="handled"
      nestedScrollEnabled={true}
      scrollEnabled={false}
    >
      <View />
    </RCTScrollView>
  </View>
</View>
`;
